ill mobs